--- a/星海移动/index.html
+++ b/星海移动/index.html
@@ -4,9 +4,96 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<script type="text/javascript" src="js/flexble.js"></script>
+	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="js/swiper.min.js"></script>
+	<script type="text/javascript" src="js/top.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/swiper.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/index.css"/>
+	<link rel="stylesheet" type="text/css" href="css/rool.css"/>
+	
 	<title>星海移动</title>
 </head>
 <body>
-	
+	<div class="container">
+		<div class="head">
+			<a href="#">
+				<h3>星海音乐学院</h3>
+				<span>xinghaiyinyuexueyuan</span>
+			</a>
+		</div>
+		<div class="banner">
+			<div class="swiper-container">
+        	<div class="swiper-wrapper">
+	            <div class="swiper-slide" style="background-image:url(images/banner.png)"></div>
+	            <div class="swiper-slide" style="background-image:url(images/banner.png)"></div>
+	            <div class="swiper-slide" style="background-image:url(images/banner.png)"></div>
+	            <div class="swiper-slide" style="background-image:url(images/banner.png)"></div>
+	            <div class="swiper-slide" style="background-image:url(images/banner.png)"></div>
+	            <div class="swiper-slide" style="background-image:url(images/banner.png)"></div>
+	            <div class="swiper-slide" style="background-image:url(images/banner.png)"></div>
+	        </div>
+	        <div class="swiper-pagination swiper-pagination-white"></div>
+		</div>
+		<script type="text/javascript">
+			var swiper = new Swiper('.swiper-container', {
+		        pagination: '.swiper-pagination',
+		        paginationClickable: true,
+		        spaceBetween: 30,
+		        centeredSlides: true,
+		        autoplay: 2500,
+		        autoplayDisableOnInteraction: false
+	    	});
+		</script>
+		</div>
+		<div class="rool">
+			<div class="swiper_wrap">
+				<ul class="font_inner">
+					<li>
+						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学进一步学进一步学进一步学习全国学习全国什么的</span></div></a>
+					</li>
+					<li>
+						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学习全国学习全国什么的</span></div></a>
+					</li>
+					<li>
+						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学习全国学习全国什么的</span></div></a>
+					</li>
+					<li>
+						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学习全国学习全国什么的</span></div></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="nav">
+			<div class="nav_1"><img src="images/gk.jpg"/><span>学校概况</span></div>
+			<div class="nav_2"><img src="images/jz.jpg"/><span>招生简章</span></div>
+			<div class="nav_3"><img src="images/xm.jpg"/><span>项目介绍</span></div>
+			<div class="nav_4"><img src="images/zy.jpg"/><span>专业设置</span></div>
+			<div class="nav_5"><img src="images/xx.png"/><span>招生信息 </span></div>
+		</div>
+		<div class="content_new_cen">
+			<h2>新闻/公告</h2>
+			<span>TEACHING STAFF</span>
+			<span></span>
+		</div>
+		<div class="announcement">
+			<div class="anno_1">
+				<img src="images/anno.png"/>
+				<p>10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+			</div>
+			<div class="anno_2">
+				<img src="images/anno.png"/>
+				<p>10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+			</div>
+			<div class="anno_3">
+				<img src="images/anno.png"/>
+				<p>10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+			</div>
+		</div>
+		<div class="teacher">
+			<h3>让你成为空乘行业的优秀领导者</h3>
+		</div>
+		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+	</div>
 </body>
 </html>
