--- a/星海移动/index.html
+++ b/星海移动/index.html
@@ -16,12 +16,12 @@
 </head>
 <body>
 	<div class="container">
-		<div class="head">
+<!--		<div class="head">
 			<a href="#">
 				<h3>星海音乐学院</h3>
 				<span>xinghaiyinyuexueyuan</span>
 			</a>
-		</div>
+		</div>-->
 		<div class="banner">
 			<div class="swiper-container">
         	<div class="swiper-wrapper">
@@ -47,19 +47,13 @@
 		</script>
 		</div>
 		<div class="rool">
+			<div class="cons">
+				<img src="images/top_mark.gif" alt="" /><span>通知公告</span>
+			</div>
 			<div class="swiper_wrap">
 				<ul class="font_inner">
 					<li>
-						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学进一步学进一步学进一步学习全国学习全国什么的</span></div></a>
-					</li>
-					<li>
-						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学习全国学习全国什么的</span></div></a>
-					</li>
-					<li>
-						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学习全国学习全国什么的</span></div></a>
-					</li>
-					<li>
-						<a href="###"><div class="top_left"><img src="images/top_mark.png"/><span>新闻资讯</span></div><div class="top_right"><span>学校党委理论中心学习组进一步学习全国学习全国什么的</span></div></a>
+						<a href="###">进一步进一步进一步进一步进一步进一步进一步进一步进一步进一步进一步进一步</a><span>&gt;</span>
 					</li>
 				</ul>
 			</div>
@@ -71,6 +65,12 @@
 			<div class="nav_4"><img src="images/zy.jpg"/><span>专业设置</span></div>
 			<div class="nav_5"><img src="images/xx.png"/><span>招生信息 </span></div>
 		</div>
+		<div class="about">
+			<h3>关于星海</h3>
+			<span><!--线条--></span>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史<span>点击了解详情</span></p>
+			
+		</div>
 		<div class="content_new_cen">
 			<h2>新闻/公告</h2>
 			<span>TEACHING STAFF</span>
@@ -79,21 +79,38 @@
 		<div class="announcement">
 			<div class="anno_1">
 				<img src="images/anno.png"/>
-				<p>10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+				<div class="anno_top"></div>
 			</div>
-			<div class="anno_2">
+			<div class="anno_1">
 				<img src="images/anno.png"/>
-				<p>10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+				<div class="anno_top"></div>
 			</div>
-			<div class="anno_3">
+			<div class="anno_1">
 				<img src="images/anno.png"/>
-				<p>10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么10月12号下午，什么什么贸易大学，的什么什么，在哪里怎么怎么的召开，规模非常怎么怎么的隆重与宏大，什么</p>
+				<div class="anno_top"></div>
 			</div>
 		</div>
+		
 		<div class="teacher">
 			<h3>让你成为空乘行业的优秀领导者</h3>
 		</div>
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
 </body>
+<script>
+var btn = document.getElementById('btn');
+var obj = document.getElementById('myarticle');
+var total_height =  obj.scrollHeight;//文章总高度
+var show_height = 300;//定义原始显示高度
+if(total_height>show_height){
+btn.style.display = 'block';
+btn.onclick = function(){
+obj.style.height = total_height + 'px';
+btn.style.display = 'none';
+}
+}
+</script>	
 </html>
