--- a/星海移动/无标题 1.html
+++ b/星海移动/无标题 1.html
@@ -1,29 +1,129 @@
-<script type="text/javascript">
-var mobileAgent = new Array("iphone", "ipod", "ipad", "android", "mobile", "blackberry", "webos", "incognito", "webmate", "bada", "nokia", "lg", "ucweb", "skyfire");
-var browser = navigator.userAgent.toLowerCase(); 
-var isMobile = false; 
-for (var i=0; i<mobileAgent.length; i++){ if (browser.indexOf(mobileAgent[i])!=-1){ isMobile = true; 
-//alert(mobileAgent[i]); 
-location.href = '手机网址';
-break; } } 
-</script>
 
+<!DOCTYPE html>
+<html lang="zh-cn">
+	<head>
+    <meta charset="utf-8">	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<title>重点航空院校招生网</title>
+	<link rel="stylesheet" href="css/1.css" />
+	<link rel="stylesheet" href="css/2.css" />
+	<link rel="stylesheet" href="css/3.css" />
+	<link rel="stylesheet" href="css/4.css" />
+	<link rel="stylesheet" href="css/5.css" />
+	<link rel="stylesheet" href="css/6.css" />
+	<script src="common/js/swiper.min.js"></script>
+	<script src="common/js/home.js"></script>
+	</head><body>
 
+	<div class="container">
+		<div class="row">
+			<div class="school_bp_z col-xs-12">
 
-<iframe style="width: 100%; height: 2.1rem;" src='http://player.youku.com/embed/XMzM3NDYxNDgxMg==' frameborder=0 'allowfullscreen'></iframe>
-				<object id="sample_video" class="vjs-flash-fallback" width="350"height="200" type="application/x-shockwave-flash"
-					data="http://player.youku.com/player.php/sid/XMzM3NDYxNDgxMg==/v.swf"> <!-- 视频地址 -->
-					<param name="movie" value="http://player.youku.com/player.php/sid/XNzE4MDgxOTIw/v.swf" /> <!-- 视频地址 -->
-					<param name="allowfullscreen" value="true" /> 
-				</object>
 				
-<video width="800" height="800">
-					<source src="myvideo.mp4" type="http://player.youku.com/embed/XMzM3NDYxNDgxMg=="></source>
-					<source src="myvideo.ogv" type="http://player.youku.com/player.php/sid/XMzM3NDYxNDgxMg==/v.swf"></source>
-					<source src="myvideo.webm" type="http://player.youku.com/player.php/sid/XMzM3NDYxNDgxMg==/v.swf"></source>
-					<object width="" height="" type="application/x-shockwave-flash" data="myvideo.swf">
-						<param name="movie" value="http://player.youku.com/embed/XMzM3NDYxNDgxMg==" />
-						<param name="flashvars" value="http://player.youku.com/player.php/sid/XMzM3NDYxNDgxMg" />
-					</object>
-					当前浏览器不支持 video直接播放，点击这里下载视频： <a href="myvideo.webm">下载视频</a>
-				</video>
+				<div class="tab_box2 col-xs-12">
+
+						<div class="tab_content_box2 col-xs-12">
+							<div class="tab_content2 current ">
+								<div class="school_ja_z col-xs-11">
+									<div class="school_ja">
+
+										<div class="school_ja_title_down col-xs-11 school_ja_XP">
+											<div class="d_school_box d_school_box_none ">
+												<p>&nbsp; &nbsp;北京航空航天大学（简称北航）成立于1952年，由当时的清华大学、北洋大学、厦门大学、四川大学等八所院校的航空系合并组建，是新中国第一所航空航天高等学府，现隶属于工业和信息化部。自建校以来，北航一直是国家重点建设的高校，是全国第一批16所重点高校之一，也是80年代恢复学位制度后全国第一批设立研究生院的22所高校之一，首批进入“211工程”，2001年进入“985工程”。2013年入选首批“2011计划”国家协同创新中心。2016年12月，学校第十六次党员代表大会提出以建设扎根中国大地的世界一流大学为学校发展远景目标。</p><p>&nbsp; &nbsp;北京航空航天大学教育培训中心成立于2004年，是北航全资的事业法人单位,面向社会开展非学历教育和培训工作的独立法人机构。中心秉承“尚德务实、求真拓新”的办学理念，以科学发展观为指导，坚持“高层次、高质量、高效益、国际化”的继续教育办学方针，探索与北航建设空天信融合的世界一流大学目标相匹配的培训体系和质量保证体系。中心依托北航强大的科研实力和师资力量，不断在教育培训领域开拓和完善具有北航特色和优势的培训项目，项目涉及通用航空、航空服务、飞行员培养、机械工程、国际语言培训、企业管理、访问学者及各种政府类定制项目等，打造教育培训行业品牌，为全面构建我国终身教育体系做出努力。</p>
+											</div>
+											<div class="d_school_box_on"><span>....</span>【展开查看更多】</div>
+											<div class="d_school_box_off">关闭</div>
+										</div>
+									</div>	
+								</div>	
+							</div>
+							<div class="tab_content2 ">
+								<div class="school_ja_z col-xs-11">
+									<div class="school_ja">
+										<div class="school_ja_title col-xs-4">
+											专业课程
+										</div>
+										<div class="school_ja_title_down col-xs-11 school_ja_XP">
+											<div class="d_school_box d_school_box_none ">
+											<p>民航基础英语、民航概论、航空服务心理学、民用航空法、机场服务概论、航空运输地理、民航专业英语、韩语、日语、职业形象设计、形体训练、游泳训练、民航乘务实务、中外民俗、公共英语三级、客舱服务、应急处置实训、形体训练、航空服务礼仪、民航面试技巧、机舱餐饮服务、茶艺、模拟机舱实际操作。</p>											</div>
+											<div class="d_school_box_on"><span>....</span>【展开查看更多】</div>
+											<div class="d_school_box_off">关闭</div>
+										</div>
+									</div>	
+								</div>	
+							</div>
+							<div class="tab_content2 ">
+								<div class="school_ja_z col-xs-11">
+									<div class="school_ja">
+										<div class="school_ja_title col-xs-4">
+											招生对象
+										</div>
+										<div class="school_ja_title_down col-xs-11 school_ja_XP">
+											<div class="d_school_box d_school_box_none ">
+											<p>面向全国招收应、往届高中毕业生或同等学历者（含已通过高中会考者，职高、中专、艺校毕业生），年龄17-21周岁。热爱祖国，遵纪守法，举止端庄，兴趣高雅，有志于从事航空服务事业，具有较强的服务意识和良好的道德品质。</p>											</div>
+											<div class="d_school_box_on"><span>....</span>【展开查看更多】</div>
+											<div class="d_school_box_off">关闭</div>
+										</div>
+									</div>	
+								</div>	
+							</div>
+							<div class="tab_content2 ">
+								<div class="school_ja_z col-xs-11">
+									<div class="school_ja">
+										<div class="school_ja_title col-xs-4">
+											就业方向
+										</div>
+										<div class="school_ja_title_down col-xs-11 school_ja_XP">
+											<div class="d_school_box d_school_box_none ">
+											<p>国内各大航空公司、机场从事空中乘务、安检、VIP贵宾、票务、值机、航空护卫、候机楼检票等工作。</p>											</div>
+											<div class="d_school_box_on"><span>....</span>【展开查看更多】</div>
+											<div class="d_school_box_off">关闭</div>
+										</div>
+									</div>	
+								</div>	
+							</div>
+							<div class="tab_content2 ">
+								<div class="school_ja_z col-xs-11">
+									<div class="school_ja">
+										<div class="school_ja_title col-xs-4">
+											院校新闻
+										</div>
+										<div class="school_ja_title_down col-xs-11 school_ja_XP">
+											<div class="d_school_box d_school_box_none ">
+																						<li><a href="?r=site/school_news&id=2">
+											北京航空航天大学航空服务精英班新生报到</a></li>
+																						<li><a href="?r=site/school_news&id=3">
+											北京航空航天大学教育培训中心2017级航空服务新生报到喽！</a></li>
+																						<li><a href="?r=site/school_news&id=4">
+											2017秋北京航空航天大学军训开始啦！！</a></li>
+																						<li><a href="?r=site/school_news&id=5">
+											北京航空航天大学-期待每一个满怀梦想的你到来</a></li>
+																
+											</div>
+											<div class="d_school_box_on"><span>....</span>【展开查看更多】</div>
+											<div class="d_school_box_off">关闭</div>
+										</div>
+									</div>	
+								</div>	
+							</div>
+						</div>
+					</div>
+				</div>	
+			</div>	
+	</div>
+
+	
+	
+
+
+	<!-- 导航 -->
+  	<script src="js/jquery-3.3.1.min.js"></script>
+	
+	<!-- 导航 -->
+	
+	<!-- banner -->
+	
+	<script src="js/111.js"></script>
+	<!--时间-->
+</body>
+</html>
