--- a/星海移动/index.html
+++ b/星海移动/index.html
@@ -68,8 +68,12 @@
 		<div class="about">
 			<h3>关于星海</h3>
 			<span><!--线条--></span>
-			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史<span>点击了解详情</span></p>
-			
+			<div class="about_box">
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;广东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专东专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史广东专业音乐教育的历史</p>
+			<div class="about_box_1"><i>....</i>点击了解详情</div>
+			<div class="about_box_2">收起</div>
+			</div>
+			<div class="about_bot"></div>
 		</div>
 		<div class="content_new_cen">
 			<h2>新闻/公告</h2>
@@ -100,17 +104,14 @@
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
 </body>
-<script>
-var btn = document.getElementById('btn');
-var obj = document.getElementById('myarticle');
-var total_height =  obj.scrollHeight;//文章总高度
-var show_height = 300;//定义原始显示高度
-if(total_height>show_height){
-btn.style.display = 'block';
-btn.onclick = function(){
-obj.style.height = total_height + 'px';
-btn.style.display = 'none';
-}
-}
-</script>	
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('.about_box_1').click(function(){
+				$(this).css('display','none').siblings('.about_box_2').css('display','block').parents('.about_box').css('height','auto');
+			});
+			$('.about_box_2').click(function(){
+				$(this).css('display','none').siblings('.about_box_1').css('display','block').parents('.about_box').css('height','2.24rem');
+			})
+		})
+	</script>
 </html>
