--- a/星海移动/new_file.html
+++ b/星海移动/new_file.html
@@ -11,7 +11,7 @@
 <style>
 
 #myarticle{
-
+position: relative;
 width:700px;
 
 height:300px;
@@ -27,20 +27,26 @@ margin:20px auto;
 p{
 
 text-indent: 2em;
-
+line-height: 30px;
 margin-bottom: 10px;
 
 }
 
-button{
+#btn{
 
-width:700px;
+width:114px;
+height: 30px;
 
 margin:10px auto;
 
 text-align: center;
 
 display: none;
+position: absolute;
+right:0;
+bottom:-15px;
+z-index: 5;
+background: white;
 
 }
 
@@ -57,8 +63,9 @@ display: none;
 <p>说到单位，屌叔也是有单位的人，作为志愿者和“携手在线”的粉丝（简称手撕，然后牛肉、鸡肉的有木有？肚子咕咕叫、口水往下流的有木有）在这里干点善事，一定为“携手在线”和网友们尽心竭力。不过，既然东家给俺发工资，咱也得给东家好好干活不是？！即使不能贴金，起码不能让东家丢脸吧！因此，屌叔有空就会与大家聊聊，没空您也别……就是没空呗。如果有什么问题，您尽管留言，屌叔一定答复，就是时间没准，屌呗！</p>
 <p>BTW，取名屌叔，还因为必须说点屌事，以后大家慢慢懂呵……</p>
 <p>非常感谢女儿和她同年同月同日生的小伙伴，是两个孩子的四只小手，牵起了两个家长的四只大手（八爪鱼有木有），携手在线为您忽悠，还要感谢携手在线的姑娘、小伙们，你们应该的呵！</p>
+<div id="btn"><span>....</span>查看更多</div>
 </div>
-<button id="btn">查看更多……</button>
+
 
 <script>
 var btn = document.getElementById('btn');
