--- a/星海移动/index.html
+++ b/星海移动/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/swiper.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/index.css"/>
 	<link rel="stylesheet" type="text/css" href="css/rool.css"/>
+	<link rel="shortcut icon" href="#" />
 	
 	<title>星海移动</title>
 </head>
@@ -101,7 +102,60 @@
 		<div class="teacher">
 			<h3>让你成为空乘行业的优秀领导者</h3>
 		</div>
-		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+		<div class="teachers">
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+			<div class="teachers_show">
+				<img src="images/mao.jpg"/>
+			</div>
+		</div>
+		<div class="order">
+		</div>
+		<div class="order_show">
+			<a href="#"><div></div></a><!--录取通知点击跳转-->
+		</div>
+		<div class="school">
+			<img src="images/school.png"/>
+		</div>
+		<div class="school_show">
+			<div class="school_video">
+				<iframe id="ifr1" src="http://player.youku.com/embed/XMzM3NDYxNDgxMg==" width="100%" height="100%"></iframe>
+			</div>
+			<div class="school_pic">
+				<img src="images/school_pic.jpg"/>
+			</div>
+			<div class="school_pic">
+				<img src="images/school_pic1.jpg"/>
+			</div>
+		</div>
+		<div class="inform">
+			<h3>通知：</h3>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;2018星海音乐学院招生开始（名额有限，额满为止）有意向的学生请尽快报名，学校收到报名申请后将在两个工作日里与您取得联系通知相关入学事宜（请保持电话畅通）</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;请务必正确输入您的信息，以方便我们的联系不耽误您的报考，郑重承诺，我们对您所填写的个人信息将绝对保密</p>
+		</div>
+		<div class="apply">
+			<div>姓名：</div><input type="text" />
+		</div>
+		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
 </body>
 	<script type="text/javascript">
