--- a/星海移动/0.html
+++ b/星海移动/0.html
@@ -19,5 +19,11 @@
 </head>
 <body>
     <button class="btn-twinkle">我是个会闪烁的按钮</button>
+    <div style="width: 1920px;height: 1080px;">
+    	<div style="background: red; width: 1920px;height: 50px;float: left;"
+    		
+    	</div>
+    	<img src="images/anno.png"/>
+    </div>
 </body>
 </html>
