--- a/星海移动/index.html
+++ b/星海移动/index.html
@@ -155,6 +155,63 @@
 		<div class="apply">
 			<div>姓名：</div><input type="text" />
 		</div>
+		<div class="apply1">
+			<div>联系方式：</div><input type="text" />
+		</div>
+		<div class="apply1">
+			<div>意向学校：</div><input type="text" />
+		</div>
+		<div class="apply2">
+			<div>身高：</div><input type="text" />
+		</div>
+		<div class="apply2">
+			<div>体重：</div><input type="text" />
+		</div>
+		<div class="apply2">
+			<div>年龄：</div><input type="text" />
+		</div>
+		<div class="apply2">
+			<div>性别：</div>
+			<div class="divsel">
+			<select>
+			  <option value ="volvo">男</option>
+			  <option value ="saab">女</option>
+			</select>
+			</div>
+		</div>
+		<div class="apply3">
+			<input type="submit" name="" id="" value="在线报名" />
+		</div>
+		
+		<div class="link">
+			<span>友情链接：</span><a href="#">友情链接</a><a href="#">友情链接</a><a href="#">友情链接</a>
+		</div>
+		
+		<div class="footer">
+			<div>
+				<a href="#">
+					<img src="images/footer1.png" alt="" />
+				</a>
+			</div>
+			<div>
+				<a href="#">
+					<img src="images/footer2.png" alt="" />
+				</a>
+			</div>
+			<div>
+				<a href="#">
+					<img src="images/footer3.png" alt="" />
+				</a>
+			</div>
+			<div>
+				<a href="#">
+					<img src="images/footer4.png" alt="" />
+				</a>
+			</div>
+		</div>
+		
+		
+		
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
 </body>
